Increase the memory size needed for running tests. Adding aqp related tests to be run as part of check